new update member;

--- a/index.html
+++ b/index.html
@@ -210,38 +210,35 @@
                         looking for motivated people to develop our research areas.
                     </p> -->
                     <p>
+
                         Glycobiology is the science of cellular communication and signalling through both simple and
                         sophisticated carbohydrates. All cells use these carbohydrate-based communication pathways. Our
-                        lab
-                        wants to understand how these molecular interactions happen, and how we can make use of them to
-                        develop
-                        new ways to treat diseases, and to figure out how biology uses these interesting molecules for
-                        so many
-                        purposes!
+                        lab wants to understand how these molecular interactions happen, and how we can make use of them
+                        to develop new ways to treat diseases, and to figure out how biology uses these interesting
+                        molecules for so many purposes!
+
 
                     </p>
-                    <p> The Wakarchuk lab specializes in using enzymes to make sophisticated carbohydrates, and we use
+                    <p>
+
+                        The Wakarchuk lab specializes in using enzymes to make sophisticated carbohydrates, and we use
                         biochemistry and synthetic biology to address this research area. We have projects in both
-                        fundamental
-                        glycoscience as well as applied projects.</p>
+                        fundamental glycoscience as well as applied projects.
+                    </p>
 
                     <p>
                         The Wakarchuk lab is always looking for interested students at all levels – undergraduates at
-                        every
-                        level are most welcome in the group. Students in Biology, Chemistry, or Biochemistry will all
-                        play a
-                        part in our group.
+                        every level are most welcome in the group. Students in Biology, Chemistry, or Biochemistry will
+                        all play a part in our group.
                     </p>
+
 
 
                     <p>
-                        The Wakarchuk lab is part of <a class="red" target="_blank" href="http://canadianglycomics.ca/">
-                            Canadian
-                            Glycomics Network </a> which
-                        is
-                        Canadian research network dedicated to GlycoScience.
+
+                        The Wakarchuk lab is part of the Canadian <a class="red" target="_blank" href="http://canadianglycomics.ca/">Glycomics network </a> which
+                        is Canadian research network dedicated to GlycoScience.
                     </p>
-                    <p> We are currently looking for MSc or PhD students for January 2020. </p>
 
                 </div>
 
