--- a/teamRyerson.html
+++ b/teamRyerson.html
@@ -203,50 +203,19 @@
                                         directing
                                         the team he can found cooking or playing guitar. </p>
                                 </div>
-                                <!-- <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Nakita 1.jpg"
-                                        alt="">
-                                    <h3 class='header team-name'>
-                                        Nakita Buenbrazo MSc
-                                    </h3>
-                                    <p class='about'> Lab Manager</p>
-
-                                    <p class='team-p'>Nakita divides her time among all the projects in the Wakarchuk
-                                        lab. She is an expert
-                                        in enzymatic synthesis, master of protein expression and purification. Nakita
-                                        has
-                                        a passion for teaching and has trained many of the Wakarchuk lab undergrad
-                                        alumni!</p>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-3'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/AJ 1.jpg" alt="">
-                                    <h3 class='header team-name'>
-                                        Aju-Sue Francis MSc
-                                    </h3>
-                                    <p class='about'> Technician </p>
-
-
-
-                                    </h2>
-                                    <p class='team-p'>Aj has been applying her microbiology expertise to using
-                                        Corynebacterium glutamicum as
-                                        an expression host for a variety of proteins of interest to the Wakarchuk lab.
-                                        She
-                                        is helping to develop new expression vectors for this work.</p>
-                                </div> -->
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-2'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images/Tasnim 1.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
-                                        Tasnim Abukar BSc MSc
+                                        Tasnim Abukar BSc, MSc
                                     </h3>
                                     <p class='about'>Technician</p>
 
-                                    <p class='team-p'>Tasnim is working between the Wakarchuk and Koivisto labs. Her
-                                        chemical biology expertise
-                                        is being applied to making fluorescent probes for enzyme studies as well as
-                                        binding
-                                        protein discovery and characterization.
+                                    <p class='team-p'>
+                                        Tasnim recently graduated from Ryerson University with an MSc degree. Tasnim is
+                                        applying her chemical biology expertise for characterization of the
+                                        glycosyltransferases we employ for both in vitro and in vivo glycan
+                                        modifications.
                                     </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-3'>
@@ -257,31 +226,14 @@
                                     </h3>
                                     <p class='about'>PhD Candidate </p>
 
-                                    <p class='team-p'>Sadia is working between the Wakarchuk and Antonescu labs (link
-                                        to Antonescu lab here).
-                                        Sadia’s cell biology expertise is being applied to functional studies of
-                                        recombinant
-                                        therapeutic proteins from the OGO project, as well studying how the O-GlcNAc
-                                        modification
-                                        is playing a role in regulation of clathrin mediated endocytosis.
+                                    <p class='team-p'>
+                                        Sadia is working between the Wakarchuk and Antonescu labs
+                                        (https://www.antonesculab.com/). Sadia’s cell biology expertise is being applied
+                                        to understanding how endomembrane traffic is influenced through nutrient sensing
+                                        and extracellular glycosylation. Her work also includes application of
+                                        glycosyltransferases to probe signalling effects of cell surface modification.
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-4'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/Jazlyn3.jpg"
-                                        alt="">
-                                    <h3 class='header team-name'>
-                                        Jazyln Borges
-                                    </h3>
-                                    <p class='about'>BSc candidate</p>
-
-                                    <p class='team-p'>Jazyln is an undergraduate re
-                                        searcher who brings a cell biology perspective to understanding how we
-                                        can use exogenous glycosyltransferase treatment to effect cellular behavior on
-                                        route to application for
-                                        cellular therapy for the repair of damaged tissue
-                                    </p>
-                                </div>
-
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-5'>
                                     <img style="padding-top: 155px;" class="rounded-circle img-fluid d-block mx-auto"
                                         src="images_new/NeuAc.png" alt="">
@@ -296,6 +248,23 @@
                                             href="https://www.plantformcorp.com/file.aspx?id=2ed272ee-535d-45d3-9d50-ec46e532a919 ">(https://www.plantformcorp.com/file.aspx?id=2ed272ee-535d-45d3-9d50-ec46e532a919).</a>
                                     </p>
                                 </div>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-4'>
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/Jazlyn3.jpg"
+                                        alt="">
+                                    <h3 class='header team-name'>
+                                        Jazyln Borges
+                                    </h3>
+                                    <p class='about'>BSc candidate</p>
+
+                                    <p class='team-p'>
+                                        Jazyln is an undergraduate researcher who brings a cell biology perspective to
+                                        understanding how we can use exogenous glycosyltransferase treatment to effect
+                                        cellular behavior on route to application for cellular therapy for the repair of
+                                        damaged tissue.
+                                    </p>
+                                </div>
+
+
 
 
 
@@ -314,6 +283,9 @@
                         </div>
                         <div class="container" style='color:black' id='writing'>
                             <div class="row">
+                                <div class="col-md-3 col-xs-3">
+                                    <p class='team-p'> Alina Aarvisais (BSc candidate COOP Fall 2019) </p>
+                                </div>
                                 <div class="col-md-3 col-xs-3">
                                     <p class='team-p'> Ugbad Hassan BSc (Intern summer 2019) </p>
                                 </div>
@@ -397,14 +369,13 @@
                         <div class="img-text">
                             <h1> <span> Click To View </span></h1>
                         </div>
-                        <a data-fancybox="gallery" href="images/Group Picture.JPG"
-                            data-title="2018 Group"
+                        <a data-fancybox="gallery" href="images/Group Picture.JPG" data-title="2018 Group"
                             data-caption="March 2018: (L to R starting at the front) Sadia, Ting, Ray, Nakita, Bettina, Tasnim, Warren, Laura, Aj, Nathan, Hirak, You.">
                             <img src="images/Group Picture.JPG">
                         </a>
                         <a data-fancybox="gallery" href="images/Events/Wakarchuk lab party 2018.jpg"
                             data-caption="Wakarchuk lab party 2018">
-                            
+
                             <img src="images/Events/Wakarchuk lab party 2018.jpg">
                         </a>
                         <a data-fancybox="gallery" href="images_new/GlycoNet dinner 2019.jpg"
@@ -447,7 +418,8 @@
                             data-caption="Warren and sialic acid 2016">
                             <img src="images/Events/Warren and sialic acid 2016.jpg">
                         </a>
-                        <a data-fancybox="gallery" href="images/Events/group 2014.jpeg" data-caption="December 2014: (L to R) Tamara, Alejandra, Nakita, Lyann, Warren, Bryan, Hirak, Soheil">
+                        <a data-fancybox="gallery" href="images/Events/group 2014.jpeg"
+                            data-caption="December 2014: (L to R) Tamara, Alejandra, Nakita, Lyann, Warren, Bryan, Hirak, Soheil">
                             <img src="images/Events/group 2014.jpeg">
                         </a>
 
