added sammar and glyconet logo

--- a/research.html
+++ b/research.html
@@ -293,6 +293,9 @@
                                         <div class="col-md-6">
                                             <img src="images/Funding/NSERC.jpg" alt="">
                                         </div>
+                                        <div class="col-md-6 offset-md-3">
+                                            <img src="images/Funding/GlycoNet.png" alt="">
+                                        </div>
                                     </div>
 
 
