--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                     <p>
 
-                        The Wakarchuk lab is part of the Canadian <a class="red" target="_blank" href="http://canadianglycomics.ca/">Glycomics network </a> which
+                        The Wakarchuk lab is part of the Canadian <a class="red" target="_blank" href="http://canadianglycomics.ca/">Glycomics Network </a> which
                         is Canadian research network dedicated to GlycoScience.
                     </p>
 
