--- a/teamAlberta.html
+++ b/teamAlberta.html
@@ -256,8 +256,8 @@
 
                                 <!-- end  -->
 
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-4'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/sammar.jpg"
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-5'>
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/sammar (Large).jpg"
                                         alt="">
                                     <h3 class='header team-name'>
                                         Samar Barazesh
@@ -272,7 +272,7 @@
                                         (https://www.ualberta.ca/science/student-services/internship-careers).
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-5'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-6'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/Lucy.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
@@ -287,7 +287,7 @@
 
                                     </p>
                                 </div>
-                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-6'>
+                                <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member green" id='member-7'>
                                     <img class="rounded-circle img-fluid d-block mx-auto" src="images_new/Leif.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
