update Nov 2020 - remove Ryerson crew and update texts

--- a/pub.html
+++ b/pub.html
@@ -116,7 +116,7 @@
                                     <a class="links" href="research.html">Research</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="links" href="pub.html">Publications</a>
+                                    <a class="links" href="https://scholar.google.ca/citations?hl=en&user=M7DNxIgAAAAJ&view_op=list_works&sortby=pubdate">Publications</a>
                                 </li>
 
                                 <li class="nav-item">
