--- a/research.html
+++ b/research.html
@@ -52,14 +52,33 @@
                 </a>
 
             </li>
+            <li style='position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);'>
+    <a class='animated-arrow'  href='https://scholar.google.ca/citations?hl=en&user=M7DNxIgAAAAJ&view_op=list_works&sortby=pubdate'>
+        <span class=''>
+            <span class='shaft'></span>
+        </span>
+        <span class='main'>
+            <span class='text' style=''>
+                Publication
+            </span>
+            <span class=''>
+                <span class='shaft'></span>
+            </span>
+        </span>
+    </a>
+
+</li>
             <li style='float:right'>
-                <a class='animated-arrow' href='pub.html'>
+                <a class='animated-arrow' href='team.html'>
                     <span class='the-arrow -left'>
                         <span class='shaft'></span>
                     </span>
                     <span class='main'>
                         <span class='text'>
-                            Publications
+                            Team
                         </span>
                         <span class='the-arrow -right'>
                             <span class='shaft'></span>
@@ -115,7 +134,7 @@
                                     <a class="links" href="research.html">Research</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="links" href="pub.html">Publications</a>
+                                    <a class="links" href="https://scholar.google.ca/citations?hl=en&user=M7DNxIgAAAAJ&view_op=list_works&sortby=pubdate">Publications</a>
                                 </li>
 
                                 <li class="nav-item">
@@ -159,24 +178,17 @@
                 <div class="col-md-12 col-sm-12" style='margin-top:0rem'>
 
                     <p style='font-size:1.7rem;'>
-                        Glycobiology is central to many important biological and biochemical processes. The interactions
-                        of cell surface glycoconjugates
-                        with other cells, proteins or pathogenic microorganisms. This process of molecular recognition
-                        is
-                        the result of interactions with many different binding partners with the carbohydrate structures
-                        driving the specificity of the interaction. Fundamental aspects of the function of these
-                        glycoconjugates
-                        are still not well understood. In order to determine the functions of these complex molecules we
-                        must be able to dissect the biosynthetic process find the control points in these processes and
-                        understand
-                        the interactions of glycoconjugates with their receptors. An important aspect of this research
-                        is
-                        that the complex carbohydrates to probe these interactions are difficult to obtain from nature,
-                        and
-                        so need to be synthesized. Chemical synthesis of these is one approach, but remains difficult
-                        for
-                        many structures, so we have been
-                        <strong> developing enzymatic methods </strong> for this.
+                        Glycobiology is central to many important biological and biochemical processes. The interactions of cell
+                        surface glycoconjugates with other cells, proteins or pathogenic microorganisms. This process of
+                        molecular recognition is the result of interactions with many different binding partners with the
+                        carbohydrate structures driving the specificity of the interaction. Fundamental aspects of the function of
+                        these glycoconjugates are still not well understood. In order to determine the functions of these
+                        complex molecules we must be able to dissect the biosynthetic process find the control points in these
+                        processes and understand the interactions of glycoconjugates with their receptors.  An important aspect
+                        of this research is that the complex carbohydrates to probe these interactions are difficult to obtain
+                        from nature, and so need to be synthesized.  Chemical synthesis of these is one approach, but remains
+                        difficult for many structures, so we have been <strong> developing enzymatic methods </strong> for this.
+                        
 
                     </p>
 
@@ -193,11 +205,11 @@
                                         alt="Polysialyation  of  proteins  to  improve  serum  half-life.">
                                 </div>
                                 <div class="col-md-3 offset-md-0">
-                                    <p style='font-size:1.7rem;'> This image shows the stages in producing two proteins.
-                                        And following the shift up the
-                                        gel which shows the addition of this modification. This modification keeps
-                                        therapeutic
-                                        proteins in the blood longer, so they keep doing their job!</p>
+                                    <p style='font-size:1.7rem;'> Polysialyation of proteins to improve serum half-life.
+                                        This image shows the stages in producing two proteins. And
+                                        following the shift up the gel which shows the addition of this
+                                        modification. This modification keeps therapeutic proteins in
+                                        the blood longer, so they keep doing their job!</p>
                                 </div>
 
                             </div>
@@ -210,22 +222,14 @@
 
                     <p>
 
-                        <p style='font-size:1.7rem;'> Our research has been focused on the investigation of the
-                            structure and function of the
-                            <strong>enzymes involved in making various glycoconjugates.</strong> The lab studies
-                            bacterial enzymes
-                            which make carbohydrate structure mimics of the host they infect, as well as the
-                            corresponding
-                            eukaryotic enzymes. The determination of glycosyltransferase enzyme donor/acceptor
-                            specificity
-                            as well as contributing to the
-                            <strong>determination of the 3-dimensional structures</strong> has been the major area of
-                            research and
-                            will continue to be the focus of my collaborative research program. We are also applying
-                            these
-                            enzymes to the synthesis of bioactive glycoconjugates for various therapeutic applications.
-                            <strong>
-                                Part of this work is the creation of designer enzymes for these applications.</strong>
+                        <p style='font-size:1.7rem;'>Our research has been focused on the investigation of the structure and function of the <strong>enzymes
+                            involved in making various glycoconjugates</strong>. The lab studies bacterial enzymes which make
+                            carbohydrate structure mimics of the host they infect, as well as the corresponding eukaryotic enzymes.
+                            The determination of glycosyltransferase enzyme donor/acceptor specificity as well as contributing to
+                            the <strong>determination of the 3-dimensional structures</strong> has been the major area of research and will
+                            continue to be the focus of my collaborative research program.  We are also applying these enzymes to
+                            the synthesis of bioactive glycoconjugates for various therapeutic applications.  <strong>Part of this work is the
+                            creation of designer enzymes for these applications.</strong>
                         </p>
 
                     </p>
@@ -233,7 +237,7 @@
 
                         <h1 class='header'
                             style='font-size:2em;margin-top:1em;color:#ea4235;text-align:center; letter-spacing:0.03em'>
-                            The First GT-52 Sialyltransferase Structure. </h1>
+                            The first GT-52 Sialyltransferase Structure. </h1>
                         <div class="container">
                             <div class="row">
 
@@ -242,12 +246,10 @@
                                         alt="PThe first GT-52 sialyltransferase structure">
                                 </div>
                                 <div class="col-md-3 offset-md-0">
-                                    <p style='font-size:1.7rem;'> This protein is from the bacterial pathogen
-                                        <span style='font-style:italic'>Neisseria meningitidis</span>, one of the
-                                        bacteria that cause meningitis. This enzyme
-                                        has two identical halves which combine to make the active enzyme. The structure
-                                        made
-                                        by this enzyme help protect the bacteria from the immune system.</p>
+                                    <p style='font-size:1.7rem;'> This protein is from the bacterial pathogen <em>Neisseria meningitidis</em>, one of
+                                        the bacteria that cause meningitis. This enzyme has two identical halves
+                                        which combine to make the active enzyme. The structure made by this
+                                        enzyme help protect the bacteria from the immune system.</p>
                                 </div>
 
                             </div>
@@ -297,11 +299,11 @@
                                             <img src="images/Funding/GlycoNet.png" alt="">
                                         </div>
                                     </div>
+s
 
 
 
-
-                                    <p style='font-size:1.7rem;'>
+                                    <!-- <p style='font-size:1.7rem;'>
                                         - The Wakarchuk lab also holds funding from
                                         <a style='color:black;border-bottom:1px solid black' target='_blank'
                                             href='http://canadianglycomics.ca/'>GlycoNet Projects</a> TP-1, TP-2, and
@@ -309,7 +311,7 @@
                                             style='color:black;border-bottom:1px solid black' target='_blank'
                                             href='https://www.ualberta.ca/biological-sciences'> Biological Sciences.
                                         </a>
-                                    </p>
+                                    </p> -->
 
 
 
@@ -320,6 +322,12 @@
                                 <div class="header">
                                     <h3>Useful GlycoScience Links </h3><br>
                                 </div>
+                                <p style='font-size:1.7rem;'>
+                                    -
+                                    <a style='color:black;border-bottom:1px solid black' target='_blank'
+                                        href='http://glycoenzymes.ccrc.uga.edu/'>
+                                        Glycoenzymes</a>
+                                </p>
                                 <p style='font-size:1.7rem;'>
                                     -
                                     <a style='color:black;border-bottom:1px solid black' target='_blank'
@@ -334,19 +342,12 @@
 
 
                                 </p>
-                                <p style="font-size:1.7rem;">
-                                    <div itemscope="" itemtype="https://schema.org/Person" style="color: black;">- <a
-                                            itemprop="sameAs" content="https://orcid.org/0000-0002-1539-1679"
-                                            href="https://orcid.org/0000-0002-1539-1679" target="orcid.widget"
-                                            rel="noopener noreferrer" style="vertical-align:top; color:black; border-bottom:1px solid black;font-size: 1.7em;
-font-weight: 300;">Orcid.org</a></div>
 
-                                </p>
                                 <p style='font-size:1.7rem; padding-bottom:7em'>
                                     -
                                     <a style='color:black;border-bottom:1px solid black' target='_blank'
-                                        href='http://glycoenzymes.ccrc.uga.edu/'>
-                                        Glycoenzymes </a>
+                                        href='https://orcid.org/0000-0002-1539-1679'>
+                                        Orcid.org </a>
 
 
                                 </p>
