--- a/index.html
+++ b/index.html
@@ -74,6 +74,58 @@
                     BREAKING NEWS!
                 </span>
             </li>
+            <!-- <li style='float:right'>
+                <a class='animated-arrow' href='team.html'>
+                    <span class='the-arrow -right'>
+                        <span class='shaft'></span>
+                    </span>
+                    <span class='main'>
+                        <span class='text'>
+                            Team
+                        </span>
+                        <span class='the-arrow -left'>
+                            <span class='shaft'></span>
+                        </span>
+                    </span>
+                </a>
+
+            </li> -->
+
+            <li style='float:left;transform: scaleX(-1);'>
+                <a class='animated-arrow' href='team.html'>
+                    <span class='the-arrow -left'>
+                        <span class='shaft'></span>
+                    </span>
+                    <span class='main'>
+                        <span class='text' style='transform: scaleX(-1);'>
+                            Team
+                        </span>
+                        <span class='the-arrow -right'>
+                            <span class='shaft'></span>
+                        </span>
+                    </span>
+                </a>
+
+            </li>
+            <li style='position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);'>
+                    <a class='animated-arrow'  href='https://scholar.google.ca/citations?hl=en&user=M7DNxIgAAAAJ&view_op=list_works&sortby=pubdate'>
+                        <span class=''>
+                            <span class='shaft'></span>
+                        </span>
+                        <span class='main'>
+                            <span class='text' style='padding-top:1em'>
+                                Publication
+                            </span>
+                            <span class=''>
+                                <span class='shaft'></span>
+                            </span>
+                        </span>
+                    </a>
+
+                </li>
             <li style='float:right'>
                 <a class='animated-arrow' href='research.html'>
                     <span class='the-arrow -left'>
@@ -89,6 +141,7 @@
                     </span>
                 </a>
             </li>
+            
 
         </ul>
     </div>
@@ -141,7 +194,7 @@
                                     <a class="links" href="research.html">Research</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="links" href="pub.html">Publications</a>
+                                    <a class="links" href="https://scholar.google.ca/citations?hl=en&user=M7DNxIgAAAAJ&view_op=list_works&sortby=pubdate">Publications</a>
                                 </li>
 
                                 <li class="nav-item">
