--- a/team.html
+++ b/team.html
@@ -242,7 +242,7 @@
                                         vitro</em> synthetic work. </p>
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-xs-12 text-center mb-4 member red" id='member-3'>
-                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia.JPG"
+                                    <img class="rounded-circle img-fluid d-block mx-auto" src="images/Sadia.jpg"
                                         alt="">
                                     <h3 class='header team-name'>
                                         Sadia Rahmani BSc
