--- a/team.html
+++ b/team.html
@@ -409,7 +409,7 @@
 
                             <p class='about' style='margin-top:1em'> Group Photos </p>
                             <p class='team-p'>2024 Undergraduate Crew:
-                                (L to R) Daryl, Rakshan, Cameron, Kailyn
+                                (L to R) Daryl, Rakshan, Cameron, Kailyn,
                                 Alexandra, Genesis
 
                             </p>
